# deterministic-event-ordering

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: assumptions.md  decision_log.md  failure_modes.md  limitations.md  milestone_1_contract.md  milestones.md  ordering_contract.md
src/deterministic_event_ordering/: model.py  ordering.py
tests/: test_ordering.py
